# hw-web-10

./: README.md  pyproject.toml
hw10/hw10/: settings.py  urls.py
hw10/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw10/quotes/migrations/: 0001_initial.py  0002_alter_author_born_location.py  0003_alter_tag_name.py
hw10/quotes/templates/quotes/: add_author.html  add_quote.html  base.html  detail.html  index.html  tag.html
hw10/quotes/templatetags/: extract_author.py  get_tags.py
hw10/users/: forms.py  urls.py  views.py
hw10/users/templates/users/: login.html  registration.html
hw10/utils/: add_quotes_to_mongo.py  authors.json  migration.py
